调整应用设置相关

--- a/ibas.thirdpartyapp.service/pom.xml
+++ b/ibas.thirdpartyapp.service/pom.xml
@@ -38,7 +38,7 @@
         </dependency>
         <dependency>
             <groupId>org.colorcoding.apps</groupId>
-            <artifactId>ibas.thirdpartyapp.wechat</artifactId>
+            <artifactId>ibas.thirdpartyapp.webapi</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
