--- a/ibas.thirdpartyapp.service/pom.xml
+++ b/ibas.thirdpartyapp.service/pom.xml
@@ -42,6 +42,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.colorcoding.apps</groupId>
+            <artifactId>ibas.thirdpartyapp.email</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
