--- a/ibas.thirdpartyapp.service/.classpath
+++ b/ibas.thirdpartyapp.service/.classpath
@@ -24,7 +24,11 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/ibas.thirdpartyapp"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ibas.thirdpartyapp">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
